@@ -35,7 +35,7 @@ import org.apache.schema_validation.types.SomeRequestWithHeader;
 import org.apache.schema_validation.types.SomeResponse;
 import org.apache.schema_validation.types.SomeResponseWithHeader;
 
-@WebService(serviceName = "SchemaValidationService", 
+@WebService(serviceName = "SchemaValidationService",
             portName = "SoapPort",
             endpointInterface = "org.apache.schema_validation.SchemaValidation",
             targetNamespace = "http://apache.org/schema_validation",
@@ -49,7 +49,7 @@ public class SchemaValidationImpl implements SchemaValidation {
     public boolean setOccuringStruct(OccuringStruct in) {
         return true;
     }
-    
+
     public ComplexStruct getComplexStruct(String in) {
         ComplexStruct complexStruct = new ComplexStruct();
         complexStruct.setElem1(in + "-one");
@@ -66,8 +66,8 @@ public class SchemaValidationImpl implements SchemaValidation {
         // an exception.
         List<Serializable> floatIntStringList = occuringStruct.getVarFloatAndVarIntAndVarString();
         floatIntStringList.add(in + "-two");
-        floatIntStringList.add(new Integer(2));
-        floatIntStringList.add(new Float(2.5f));
+        floatIntStringList.add(Integer.valueOf(2));
+        floatIntStringList.add(Float.valueOf(2.5f));
         return occuringStruct;
     }
 
@@ -87,14 +87,13 @@ public class SchemaValidationImpl implements SchemaValidation {
         } else {
             response.setTransactionId("aaaaaaaaaa");
         }
-        
+
         return response;
     }
 
 
     public SomeResponseWithHeader doSomethingWithHeader(SomeRequestWithHeader in,
                                                         SomeHeader inHeader) {
-        // TODO Auto-generated method stub
         return null;
     }
 }
