@@ -75,12 +75,11 @@ import org.apache.type_test.types3.OccuringStruct;
 import org.apache.type_test.types3.OccuringStruct1;
 import org.apache.type_test.types3.OccuringStruct2;
 
-import org.junit.Ignore;
 import org.junit.Test;
 
 public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
 
- 
+
     protected boolean equals(ChoiceOfChoice x, ChoiceOfChoice y) {
         if (x.getVarInt() != null && y.getVarInt() != null) {
             return x.getVarInt().equals(y.getVarInt());
@@ -128,12 +127,12 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     protected boolean equals(ChoiceOfSeq x, ChoiceOfSeq y) {
-        if (x.getVarFloat() != null && x.getVarInt() != null 
+        if (x.getVarFloat() != null && x.getVarInt() != null
             && y.getVarFloat() != null && y.getVarInt() != null) {
             return x.getVarInt().equals(y.getVarInt())
                 && x.getVarFloat().compareTo(y.getVarFloat()) == 0;
         }
-        if (x.getVarOtherInt() != null && y.getVarOtherInt() != null 
+        if (x.getVarOtherInt() != null && y.getVarOtherInt() != null
             && x.getVarString() != null && y.getVarString() != null) {
             return x.getVarOtherInt().equals(y.getVarOtherInt())
                 && x.getVarString().equals(y.getVarString());
@@ -229,7 +228,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             assertTrue("testDerivedStructBaseStruct(): Incorrect return value", equals(x, ret));
         }
     }
-    
+
     protected boolean equals(DerivedStructBaseChoice x, DerivedStructBaseChoice y) {
         return equals((SimpleChoice)x, (SimpleChoice)y)
             && (Float.compare(x.getVarFloatExt(), y.getVarFloatExt()) == 0)
@@ -331,7 +330,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             assertTrue("testDerivedChoiceBaseStruct(): Incorrect return value", equals(x, ret));
         }
     }
-    
+
     //org.apache.type_test.types1.DerivedChoiceBaseArray
 
     protected boolean equals(DerivedChoiceBaseArray x, DerivedChoiceBaseArray y) {
@@ -385,7 +384,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     //org.apache.type_test.types1.DerivedChoiceBaseChoice
-    
+
     protected boolean equals(DerivedChoiceBaseChoice x, DerivedChoiceBaseChoice y) {
         boolean isEquals = x.getAttrString().equals(y.getAttrString());
         if (x.getVarStringExt() != null && y.getVarStringExt() != null) {
@@ -545,7 +544,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         assertNotNull(y.value);
         assertNotNull(z.value);
         assertNotNull(ret);
-        
+
         assertTrue(y.value instanceof DerivedEmptyBaseEmptyAll);
         assertTrue(z.value instanceof DerivedEmptyBaseEmptyAll);
         assertTrue(ret instanceof DerivedEmptyBaseEmptyAll);
@@ -574,7 +573,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         assertNotNull(y.value);
         assertNotNull(z.value);
         assertNotNull(ret);
-        
+
         assertTrue(y.value instanceof DerivedEmptyBaseEmptyChoice);
         assertTrue(z.value instanceof DerivedEmptyBaseEmptyChoice);
         assertTrue(ret instanceof DerivedEmptyBaseEmptyChoice);
@@ -585,10 +584,9 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     protected boolean equals(RestrictedChoiceBaseChoice x, RestrictedChoiceBaseChoice y) {
         if (x.getVarFloat() != null && y.getVarFloat() != null) {
             return x.getVarFloat().compareTo(y.getVarFloat()) == 0;
-        } else {
-            return x.getVarInt() != null && y.getVarInt() != null
-                && x.getVarInt().compareTo(y.getVarInt()) == 0;
         }
+        return x.getVarInt() != null && y.getVarInt() != null
+            && x.getVarInt().compareTo(y.getVarInt()) == 0;
     }
 
     @Test
@@ -679,11 +677,11 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         ComplexTypeWithAttributeGroup1 x = new ComplexTypeWithAttributeGroup1();
         x.setAttrInt(new BigInteger("123"));
         x.setAttrString("x123");
-        x.setAttrFloat(new Float(3.14f));
+        x.setAttrFloat(Float.valueOf(3.14f));
         ComplexTypeWithAttributeGroup1 yOrig = new ComplexTypeWithAttributeGroup1();
         yOrig.setAttrInt(new BigInteger("456"));
         yOrig.setAttrString("x456");
-        yOrig.setAttrFloat(new Float(6.28f));
+        yOrig.setAttrFloat(Float.valueOf(6.28f));
 
         Holder<ComplexTypeWithAttributeGroup1> y = new Holder<ComplexTypeWithAttributeGroup1>(yOrig);
         Holder<ComplexTypeWithAttributeGroup1> z = new Holder<ComplexTypeWithAttributeGroup1>();
@@ -720,9 +718,9 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             return;
         }
         SequenceWithGroupSeq x = new SequenceWithGroupSeq();
-        x.setVarInt(100);         
+        x.setVarInt(100);
         x.setVarString("hello");
-        x.setVarFloat(1.1f); 
+        x.setVarFloat(1.1f);
         x.setVarOtherInt(11);
         x.setVarOtherString("world");
         x.setVarOtherFloat(10.1f);
@@ -921,7 +919,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     //org.apache.type_test.types2.GroupDirectlyInComplexType
 
     protected boolean equals(GroupDirectlyInComplexType x, GroupDirectlyInComplexType y) {
-        return x.getVarInt() == y.getVarInt() 
+        return x.getVarInt() == y.getVarInt()
             && x.getVarString().equals(y.getVarString())
             && Float.compare(x.getVarFloat(), y.getVarFloat()) == 0
             && x.getAttr1().equals(y.getAttr1());
@@ -935,12 +933,12 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         x.setVarInt(100);
         x.setVarString("hello");
         x.setVarFloat(1.1f);
-        x.setAttr1(new Integer(1));
+        x.setAttr1(Integer.valueOf(1));
         GroupDirectlyInComplexType yOrig = new GroupDirectlyInComplexType();
         yOrig.setVarInt(11);
         yOrig.setVarString("world");
         yOrig.setVarFloat(10.1f);
-        yOrig.setAttr1(new Integer(2)); 
+        yOrig.setAttr1(Integer.valueOf(2));
 
         Holder<GroupDirectlyInComplexType> y = new Holder<GroupDirectlyInComplexType>(yOrig);
         Holder<GroupDirectlyInComplexType> z = new Holder<GroupDirectlyInComplexType>();
@@ -1008,7 +1006,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         assertEquals("StructWithAny addresses don't match", a.getAddress(), b.getAddress());
         assertEquals(a.getAny(), b.getAny());
     }
-    
+
     public void assertEquals(Element elA, Element elB) throws Exception {
         if (elA instanceof SOAPElement && elB instanceof SOAPElement) {
             SOAPElement soapA = (SOAPElement)elA;
@@ -1017,14 +1015,14 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
                 soapA.getElementName(), soapB.getElementName());
             assertEquals("StructWithAny soap element text nodes don't match",
                 soapA.getValue(), soapB.getValue());
-            
+
             Iterator<?> itExp = soapA.getChildElements();
             Iterator<?> itGen = soapB.getChildElements();
             while (itExp.hasNext()) {
                 if (!itGen.hasNext()) {
                     fail("Incorrect number of child elements inside any");
                 }
-                Object objA = itExp.next();         
+                Object objA = itExp.next();
                 Object objB = itGen.next();
                 if (objA instanceof SOAPElement) {
                     if (objB instanceof SOAPElement) {
@@ -1129,7 +1127,6 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     // StructWithInvalidAny
-    // XXX - no exception thrown
     @Test
     public void testStructWithInvalidAny() throws Exception {
         if (!shouldRunTest("StructWithInvalidAny")) {
@@ -1178,7 +1175,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
 
         List<Element> ae = a.getAny();
         List<Element> be = b.getAny();
-        
+
         assertEquals("StructWithAny soap element lengths don't match", ae.size(), be.size());
         for (int i = 0; i < ae.size(); i++) {
             assertEquals(ae.get(i), be.get(i));
@@ -1229,7 +1226,6 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     // StructWithInvalidAnyArray
-    // XXX - no exception thrown
     @Test
     public void testStructWithInvalidAnyArray() throws Exception {
         if (!shouldRunTest("StructWithInvalidAnyArray")) {
@@ -1269,24 +1265,6 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             // Expected
             fail("testStructWithInvalidAnyArray(): caught expected exception - woot.");
         }
-    }
-
-    @Test
-    @Ignore
-    public void testStructWithAnyStrict() throws Exception {
-        if (!shouldRunTest("StructWithAnyStrict")) {
-            return;
-        }
-        // XXX - only added to the soap typetest
-    }
-
-    @Test
-    @Ignore
-    public void testStructWithAnyArrayLax() throws Exception {
-        if (!shouldRunTest("StructWithAnyArrayLax")) {
-            return;
-        }
-        // XXX - only added to the soap typetest
     }
 
     //org.apache.type_test.types2.IDTypeAttribute
@@ -1373,9 +1351,9 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
                        equals(x, ret));
         }
     }
- 
+
     //org.apache.type_test.types2.StructWithBinary;
-    
+
     protected boolean equals(StructWithBinary x, StructWithBinary y) {
         return Arrays.equals(x.getBase64(), y.getBase64())
             && Arrays.equals(x.getHex(), y.getHex());
@@ -1419,10 +1397,9 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     protected boolean equals(ChoiceWithBinary x, ChoiceWithBinary y) {
         if (x.getBase64() != null && y.getBase64() != null) {
             return Arrays.equals(x.getBase64(), y.getBase64());
-        } else {
-            return x.getHex() != null && y.getHex() != null
-                && Arrays.equals(x.getHex(), y.getHex());
         }
+        return x.getHex() != null && y.getHex() != null
+            && Arrays.equals(x.getHex(), y.getHex());
     }
 
     @Test
@@ -1481,7 +1458,6 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         return false;
     }
 
-    // XXX - Generated code flattens nested choice
     @Test
     public void testChoiceWithGroupChoice() throws Exception {
         if (!shouldRunTest("ChoiceWithGroupChoice")) {
@@ -1512,7 +1488,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
                        equals(x, ret));
         }
     }
-    
+
     //org.apache.type_test.types2.ChoiceWithGroupSeq;
 
     protected boolean equals(ChoiceWithGroupSeq x, ChoiceWithGroupSeq y) {
@@ -1538,8 +1514,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         }
         return false;
     }
-    
-    // XXX - Generated code flattens nested structs
+
     @Test
     public void testChoiceWithGroupSeq() throws Exception {
         if (!shouldRunTest("ChoiceWithGroupSeq")) {
@@ -1574,30 +1549,28 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
                        equals(x, ret));
         }
     }
-    
+
     //org.apache.type_test.types2.ChoiceWithGroups;
 
     protected boolean equals(ChoiceWithGroups x, ChoiceWithGroups y) {
         if (x.getVarInt() != null && x.getVarString() != null
             && x.getVarFloat() != null) {
-            return x.getVarInt().compareTo(y.getVarInt()) == 0 
+            return x.getVarInt().compareTo(y.getVarInt()) == 0
                 && x.getVarString().equals(y.getVarString())
                 && x.getVarFloat().compareTo(y.getVarFloat()) == 0;
-        } else {
-            if (x.getVarOtherFloat() != null && y.getVarOtherFloat() != null) {
-                return x.getVarOtherFloat().compareTo(y.getVarOtherFloat()) == 0;
-            }
-            if (x.getVarOtherInt() != null && y.getVarOtherInt() != null) {
-                return x.getVarOtherInt().compareTo(y.getVarOtherInt()) == 0;
-            }
-            if (x.getVarOtherString() != null && y.getVarOtherString() != null) {
-                return x.getVarOtherString().equals(y.getVarOtherString());
-            }
-            return false;
         }
+        if (x.getVarOtherFloat() != null && y.getVarOtherFloat() != null) {
+            return x.getVarOtherFloat().compareTo(y.getVarOtherFloat()) == 0;
+        }
+        if (x.getVarOtherInt() != null && y.getVarOtherInt() != null) {
+            return x.getVarOtherInt().compareTo(y.getVarOtherInt()) == 0;
+        }
+        if (x.getVarOtherString() != null && y.getVarOtherString() != null) {
+            return x.getVarOtherString().equals(y.getVarOtherString());
+        }
+        return false;
     }
-    
-    // XXX - Generated code flattens nested structs
+
     @Test
     public void testChoiceWithGroups() throws Exception {
         if (!shouldRunTest("ChoiceWithGroups")) {
@@ -1727,12 +1700,12 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         x.setVarString("hello");
         x.setVarInt(1000);
         x.setAtString("hello attribute");
-        x.setAtInt(new Integer(2000));
+        x.setAtInt(Integer.valueOf(2000));
 
         y.setVarString("there");
         y.setVarInt(1001);
         y.setAtString("there attribute");
-        y.setAtInt(new Integer(2002));
+        y.setAtInt(Integer.valueOf(2002));
 
         Map<QName, String> xAttrMap = x.getOtherAttributes();
         xAttrMap.put(xAt1Name, "one");
@@ -1789,7 +1762,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             || !equalsNilable(x.getAtInt(), y.getAtInt())) {
             fail("grrr");
             return false;
-        } 
+        }
         return equalsQNameStringPairs(x.getOtherAttributes(), y.getOtherAttributes());
     }
 
@@ -1808,11 +1781,11 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
 
         x.setVarString("hello");
         x.setAtString("hello attribute");
-        x.setAtInt(new Integer(2000));
+        x.setAtInt(Integer.valueOf(2000));
 
         y.setVarInt(1001);
         y.setAtString("there attribute");
-        y.setAtInt(new Integer(2002));
+        y.setAtInt(Integer.valueOf(2002));
 
         Map<QName, String> xAttrMap = x.getOtherAttributes();
         xAttrMap.put(xAt1Name, "one");
@@ -1890,19 +1863,19 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             return;
         }
         OccuringStruct x = new OccuringStruct();
-        List<Serializable> theList = x.getVarFloatAndVarIntAndVarString(); 
+        List<Serializable> theList = x.getVarFloatAndVarIntAndVarString();
         theList.add(1.14f);
-        theList.add(new Integer(0));
+        theList.add(Integer.valueOf(0));
         theList.add("x1");
         theList.add(11.14f);
-        theList.add(new Integer(1));
+        theList.add(Integer.valueOf(1));
         theList.add("x2");
         x.setVarAttrib("x_attr");
 
         OccuringStruct yOriginal = new OccuringStruct();
         theList = yOriginal.getVarFloatAndVarIntAndVarString();
         theList.add(3.14f);
-        theList.add(new Integer(42));
+        theList.add(Integer.valueOf(42));
         theList.add("y");
         yOriginal.setVarAttrib("y_attr");
 
@@ -1928,7 +1901,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     //org.apache.type_test.types3.OccuringStruct1;
-    
+
     protected boolean equals(OccuringStruct1 x, OccuringStruct1 y) {
         return equalsFloatIntStringList(x.getVarFloatAndVarIntAndVarString(),
                                         y.getVarFloatAndVarIntAndVarString());
@@ -1939,7 +1912,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
             return;
         }
         OccuringStruct1 x = new OccuringStruct1();
-        List<Serializable> theList = x.getVarFloatAndVarIntAndVarString(); 
+        List<Serializable> theList = x.getVarFloatAndVarIntAndVarString();
         theList.add(1.1f);
         theList.add(2);
         theList.add("xX");
@@ -1972,7 +1945,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     //org.apache.type_test.types3.OccuringStruct2;
-    
+
     protected boolean equals(OccuringStruct2 x, OccuringStruct2 y) {
         if (Float.compare(x.getVarFloat(), y.getVarFloat()) != 0) {
             return false;
@@ -2121,7 +2094,7 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
     }
 
     //org.apache.type_test.types3.OccuringChoice1;
-    
+
     @SuppressWarnings("rawtypes")
     protected boolean equals(OccuringChoice1 x, OccuringChoice1 y) {
         List<Comparable> xList = x.getVarFloatOrVarInt();
@@ -2157,9 +2130,9 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         @SuppressWarnings("rawtypes")
         List<Comparable> theList = x.getVarFloatOrVarInt();
         theList.add(0);
-        theList.add(new Float(1.14f));
+        theList.add(Float.valueOf(1.14f));
         theList.add(1);
-        theList.add(new Float(11.14f));
+        theList.add(Float.valueOf(11.14f));
         // leave y empty
         OccuringChoice1 yOriginal = new OccuringChoice1();
 
@@ -2310,5 +2283,5 @@ public abstract class AbstractTypeTestClient3 extends AbstractTypeTestClient2 {
         assertEquals("testUnionWithAnonEnum(): Incorrect value for out param", yOrig, z.value);
         assertEquals("testUnionWithAnonEnum(): Incorrect return value", x, ret);
     }
-    
+
 }
